podcasts information formatted, still need to pull correct info, clean up formatting
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14627 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/css/podcaster.css
+++ b/podcasts-app/src/webapp/css/podcaster.css
@@ -31,3 +31,19 @@
 span.active {
   color: #0099cc;
 }
+
+.podDateFormat {
+	position: relative;
+	top: 5px;
+	font-size: 15pt;
+}
+
+.podTitleFormat {
+	position: relative;
+	top: 8px;
+	font-size: 12pt;
+}
+
+.posted {
+	font-size: 8pt;
+}
