--- a/podcasts-app/src/webapp/css/podcaster.css
+++ b/podcasts-app/src/webapp/css/podcaster.css
@@ -34,16 +34,30 @@ span.active {
 
 .podDateFormat {
 	position: relative;
-	top: 5px;
-	font-size: 15pt;
+	top: 10px;
+	font-size: 13pt;
 }
 
 .podTitleFormat {
 	position: relative;
-	top: 8px;
-	font-size: 12pt;
+	top: 15px;
+	font-size: 11pt;
+}
+
+.podDescFormat {
+	padding: 0px 0px 5px 0px;
 }
 
 .posted {
 	font-size: 8pt;
+}
+
+.podPosition {
+	position: relative;
+	top: 18px;
+}
+
+.podLinksPosition {
+	position: relative;
+	top: 22px;
 }
