renamed couple classes, can select podcast to display on delete page, delete/revise functionality still needed
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14629 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/css/podcaster.css
+++ b/podcasts-app/src/webapp/css/podcaster.css
@@ -45,14 +45,6 @@ span.active {
 }
 
 .podDescFormat {
-	padding: 0px 0px 5px 0px;
-}
-
-.posted {
-	font-size: 8pt;
-}
-
-.podPosition {
 	position: relative;
 	top: 18px;
 }
@@ -60,4 +52,10 @@ span.active {
 .podLinksPosition {
 	position: relative;
 	top: 22px;
+}
+
+.posted {
+	position: relative;
+	top: 13px;
+	font-size: 8pt;
 }
