bring in the changes that didn't make it during the move from contrib
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14691 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/css/podcaster.css
+++ b/podcasts-app/src/webapp/css/podcaster.css
@@ -1,3 +1,7 @@
+body {
+	width: 98%;
+}
+
 .reqPrompt {
     position : relative;
     top : 4px;
@@ -81,4 +85,18 @@ span.active {
 .podDelButtonsPosition {
 	position: relative;
 	top: 30px;
+}
+
+.blacklink {
+    color: #FFFFFF;
+}
+
+.moveUp {
+	position: relative;
+	top: 20px;
+}
+
+.rssIcon {
+	position: relative;
+	top: 6px;
 }
