SAK-6412 - also applied lining up textbox changes to Revise Podcast
SAK-6653 - will display invalid time info entered (per Kristol, Megan)

git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@15644 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/css/podcaster.css
+++ b/podcasts-app/src/webapp/css/podcaster.css
@@ -3,34 +3,39 @@ body {
 }
 
 .reqPrompt {
-    position : relative;
-    top : 4px;
-    left : 2px;
+    position: relative;
+    top: 4px;
+    left: 2px;
 }
 
 .indnt1 {
-    position : relative;
-    left : 15px;
+    position: relative;
+    left: 15px;
 }
 
 .indnt2 {
-    position : relative;
-    left : 18px;
+    position: relative;
+    left: 18px;
 }
 
 .indnt3 {
-    position : relative;
-    left : 37px;
+    position: relative;
+    left: 37px;
+}
+
+.indnt35 {
+	position: relative;
+	left: 64px;
 }
 
 .indnt4 {
 	position: relative;
-	left: 59px;
+	left: 58px;
 }
 
 .indnt6 {
-	position : relative;
-	left : -18px;
+	position: relative;
+	left: -18px;
 }
 
 .podcatcher_popup {
