SAK-9181 - fixing this moved toolbar down. SAK-9206 - added space needed. also updated RSS feed icon to use one from silk.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@28998 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/css/podcaster.css
+++ b/podcasts-app/src/webapp/css/podcaster.css
@@ -29,6 +29,11 @@ body {
 	top: 18px;
 }
 
+.podMenuPosition {
+	position: relative;
+	top: -15px;
+}
+
 .podLinksPosition {
 	position: relative;
 	top: 22px;
